Reworked Registration and Login