@@ -2,6 +2,7 @@ package com.edusenior.project;
 
 import com.edusenior.project.RestControllers.LoginController;
 import com.edusenior.project.RestControllers.Student.StudentCustomErrorResponse;
+import com.edusenior.project.Utility.ServerResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
@@ -10,34 +11,29 @@ import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import javax.security.auth.login.LoginException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class ExceptionHandlers {
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<StudentCustomErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ServerResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
         // Extracting error messages
         List<String> errorMessages = ex.getBindingResult().getFieldErrors().stream()
                 .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
 
-        // Joining messages if multiple, or get the single one
-        String combinedErrorMessage = String.join(",", errorMessages);
-
-        // Now using the combinedErrorMessage as the message for the response
-        StudentCustomErrorResponse error = new StudentCustomErrorResponse(System.currentTimeMillis(),
-                HttpStatus.BAD_REQUEST.value(),
-                combinedErrorMessage);
+        ServerResponse error = new ServerResponse("failed",errorMessages);
 
         return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
     }
     @ExceptionHandler(LoginException.class)
-    public ResponseEntity<StudentCustomErrorResponse> handleLoginException(LoginException ex) {
-        StudentCustomErrorResponse error = new StudentCustomErrorResponse(System.currentTimeMillis(),
-                HttpStatus.UNAUTHORIZED.value(),
-                ex.getMessage());
-
+    public ResponseEntity<ServerResponse> handleLoginException(LoginException ex) {
+        ArrayList<String> errors = new ArrayList<>();
+        errors.add("Invalid credentials");
+        ServerResponse error = new ServerResponse("failed",errors);
         return new ResponseEntity<>(error, HttpStatus.UNAUTHORIZED);
     }
 }
